autocoop/esl/antlr/eslParser.py
# Generated from esl.g4 by ANTLR 4.7.1
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class eslParser ( Parser ):

    grammarFileName = "esl.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"';'", u"'IMPORT'", u"'('", u"')'", 
                     u"'RETURNS'", u"'NONE'", u"'FROM'", u"'DEF'", u"'{'", 
                     u"'}'", u"','", u"':'", u"'&'", u"'='", u"'ASSERT'", 
                     u"'GOTO'", u"'IF'" ]

    symbolicNames = [ u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"<INVALID>", u"<INVALID>", 
                      u"<INVALID>", u"<INVALID>", u"CMP_OP", u"REG_ID", 
                      u"TYPE", u"GADGET_ID", u"ARG_ID", u"STRING", u"INT", 
                      u"LABEL_ID", u"WS", u"LINE_COMMENT" ]

    RULE_esl = 0
    RULE_imports = 1
    RULE_py_import = 2
    RULE_esl_import = 3
    RULE_definitions = 4
    RULE_definition = 5
    RULE_arg_ids = 6
    RULE_main = 7
    RULE_statements = 8
    RULE_statement = 9
    RULE_gadget = 10
    RULE_arguments = 11
    RULE_argument = 12
    RULE_assignment = 13
    RULE_reg_assign = 14
    RULE_assert_stmt = 15
    RULE_jmp_stmt = 16
    RULE_if_stmt = 17
    RULE_label_stmt = 18
    RULE_types = 19

    ruleNames =  [ u"esl", u"imports", u"py_import", u"esl_import", u"definitions", 
                   u"definition", u"arg_ids", u"main", u"statements", u"statement", 
                   u"gadget", u"arguments", u"argument", u"assignment", 
                   u"reg_assign", u"assert_stmt", u"jmp_stmt", u"if_stmt", 
                   u"label_stmt", u"types" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    CMP_OP=18
    REG_ID=19
    TYPE=20
    GADGET_ID=21
    ARG_ID=22
    STRING=23
    INT=24
    LABEL_ID=25
    WS=26
    LINE_COMMENT=27

    def __init__(self, input, output=sys.stdout):
        super(eslParser, self).__init__(input, output=output)
        self.checkVersion("4.7.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class EslContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.EslContext, self).__init__(parent, invokingState)
            self.parser = parser

        def imports(self):
            return self.getTypedRuleContext(eslParser.ImportsContext,0)


        def definitions(self):
            return self.getTypedRuleContext(eslParser.DefinitionsContext,0)


        def main(self):
            return self.getTypedRuleContext(eslParser.MainContext,0)


        def getRuleIndex(self):
            return eslParser.RULE_esl

        def enterRule(self, listener):
            if hasattr(listener, "enterEsl"):
                listener.enterEsl(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEsl"):
                listener.exitEsl(self)




    def esl(self):

        localctx = eslParser.EslContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_esl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self.imports()
            self.state = 41
            self.definitions()
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==eslParser.GADGET_ID:
                self.state = 42
                self.main()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ImportsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.ImportsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def py_import(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(eslParser.Py_importContext)
            else:
                return self.getTypedRuleContext(eslParser.Py_importContext,i)


        def esl_import(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(eslParser.Esl_importContext)
            else:
                return self.getTypedRuleContext(eslParser.Esl_importContext,i)


        def getRuleIndex(self):
            return eslParser.RULE_imports

        def enterRule(self, listener):
            if hasattr(listener, "enterImports"):
                listener.enterImports(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitImports"):
                listener.exitImports(self)




    def imports(self):

        localctx = eslParser.ImportsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_imports)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 53
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==eslParser.T__1:
                self.state = 47
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                if la_ == 1:
                    self.state = 45
                    self.py_import()
                    pass

                elif la_ == 2:
                    self.state = 46
                    self.esl_import()
                    pass


                self.state = 49
                self.match(eslParser.T__0)
                self.state = 55
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Py_importContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.Py_importContext, self).__init__(parent, invokingState)
            self.parser = parser

        def GADGET_ID(self):
            return self.getToken(eslParser.GADGET_ID, 0)

        def types(self):
            return self.getTypedRuleContext(eslParser.TypesContext,0)


        def STRING(self):
            return self.getToken(eslParser.STRING, 0)

        def TYPE(self):
            return self.getToken(eslParser.TYPE, 0)

        def getRuleIndex(self):
            return eslParser.RULE_py_import

        def enterRule(self, listener):
            if hasattr(listener, "enterPy_import"):
                listener.enterPy_import(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPy_import"):
                listener.exitPy_import(self)




    def py_import(self):

        localctx = eslParser.Py_importContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_py_import)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            self.match(eslParser.T__1)
            self.state = 57
            self.match(eslParser.GADGET_ID)
            self.state = 58
            self.match(eslParser.T__2)
            self.state = 59
            self.types()
            self.state = 60
            self.match(eslParser.T__3)
            self.state = 61
            self.match(eslParser.T__4)
            self.state = 62
            _la = self._input.LA(1)
            if not(_la==eslParser.T__5 or _la==eslParser.TYPE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 63
            self.match(eslParser.T__6)
            self.state = 64
            self.match(eslParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Esl_importContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.Esl_importContext, self).__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(eslParser.STRING, 0)

        def getRuleIndex(self):
            return eslParser.RULE_esl_import

        def enterRule(self, listener):
            if hasattr(listener, "enterEsl_import"):
                listener.enterEsl_import(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitEsl_import"):
                listener.exitEsl_import(self)




    def esl_import(self):

        localctx = eslParser.Esl_importContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_esl_import)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.match(eslParser.T__1)
            self.state = 67
            self.match(eslParser.STRING)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinitionsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.DefinitionsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def definition(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(eslParser.DefinitionContext)
            else:
                return self.getTypedRuleContext(eslParser.DefinitionContext,i)


        def getRuleIndex(self):
            return eslParser.RULE_definitions

        def enterRule(self, listener):
            if hasattr(listener, "enterDefinitions"):
                listener.enterDefinitions(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefinitions"):
                listener.exitDefinitions(self)




    def definitions(self):

        localctx = eslParser.DefinitionsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_definitions)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 72
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==eslParser.T__7:
                self.state = 69
                self.definition()
                self.state = 74
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DefinitionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.DefinitionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def GADGET_ID(self):
            return self.getToken(eslParser.GADGET_ID, 0)

        def statements(self):
            return self.getTypedRuleContext(eslParser.StatementsContext,0)


        def TYPE(self):
            return self.getToken(eslParser.TYPE, 0)

        def arg_ids(self):
            return self.getTypedRuleContext(eslParser.Arg_idsContext,0)


        def getRuleIndex(self):
            return eslParser.RULE_definition

        def enterRule(self, listener):
            if hasattr(listener, "enterDefinition"):
                listener.enterDefinition(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitDefinition"):
                listener.exitDefinition(self)




    def definition(self):

        localctx = eslParser.DefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_definition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 75
            self.match(eslParser.T__7)
            self.state = 76
            self.match(eslParser.GADGET_ID)
            self.state = 77
            self.match(eslParser.T__2)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==eslParser.ARG_ID:
                self.state = 78
                self.arg_ids()


            self.state = 81
            self.match(eslParser.T__3)
            self.state = 82
            self.match(eslParser.T__4)
            self.state = 83
            _la = self._input.LA(1)
            if not(_la==eslParser.T__5 or _la==eslParser.TYPE):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 84
            self.match(eslParser.T__8)
            self.state = 85
            self.statements()
            self.state = 86
            self.match(eslParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Arg_idsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.Arg_idsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ARG_ID(self, i=None):
            if i is None:
                return self.getTokens(eslParser.ARG_ID)
            else:
                return self.getToken(eslParser.ARG_ID, i)

        def getRuleIndex(self):
            return eslParser.RULE_arg_ids

        def enterRule(self, listener):
            if hasattr(listener, "enterArg_ids"):
                listener.enterArg_ids(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArg_ids"):
                listener.exitArg_ids(self)




    def arg_ids(self):

        localctx = eslParser.Arg_idsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_arg_ids)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            self.match(eslParser.ARG_ID)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==eslParser.T__10:
                self.state = 89
                self.match(eslParser.T__10)
                self.state = 90
                self.match(eslParser.ARG_ID)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class MainContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.MainContext, self).__init__(parent, invokingState)
            self.parser = parser

        def GADGET_ID(self):
            return self.getToken(eslParser.GADGET_ID, 0)

        def statements(self):
            return self.getTypedRuleContext(eslParser.StatementsContext,0)


        def getRuleIndex(self):
            return eslParser.RULE_main

        def enterRule(self, listener):
            if hasattr(listener, "enterMain"):
                listener.enterMain(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitMain"):
                listener.exitMain(self)




    def main(self):

        localctx = eslParser.MainContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_main)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            self.match(eslParser.GADGET_ID)
            self.state = 97
            self.match(eslParser.T__8)
            self.state = 98
            self.statements()
            self.state = 99
            self.match(eslParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.StatementsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(eslParser.StatementContext)
            else:
                return self.getTypedRuleContext(eslParser.StatementContext,i)


        def assert_stmt(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(eslParser.Assert_stmtContext)
            else:
                return self.getTypedRuleContext(eslParser.Assert_stmtContext,i)


        def jmp_stmt(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(eslParser.Jmp_stmtContext)
            else:
                return self.getTypedRuleContext(eslParser.Jmp_stmtContext,i)


        def if_stmt(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(eslParser.If_stmtContext)
            else:
                return self.getTypedRuleContext(eslParser.If_stmtContext,i)


        def label_stmt(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(eslParser.Label_stmtContext)
            else:
                return self.getTypedRuleContext(eslParser.Label_stmtContext,i)


        def getRuleIndex(self):
            return eslParser.RULE_statements

        def enterRule(self, listener):
            if hasattr(listener, "enterStatements"):
                listener.enterStatements(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStatements"):
                listener.exitStatements(self)




    def statements(self):

        localctx = eslParser.StatementsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_statements)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << eslParser.T__14) | (1 << eslParser.T__15) | (1 << eslParser.T__16) | (1 << eslParser.TYPE) | (1 << eslParser.GADGET_ID) | (1 << eslParser.LABEL_ID))) != 0):
                self.state = 116
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [eslParser.TYPE, eslParser.GADGET_ID]:
                    self.state = 101
                    self.statement()
                    self.state = 102
                    self.match(eslParser.T__0)
                    pass
                elif token in [eslParser.T__14]:
                    self.state = 104
                    self.assert_stmt()
                    self.state = 105
                    self.match(eslParser.T__0)
                    pass
                elif token in [eslParser.T__15]:
                    self.state = 107
                    self.jmp_stmt()
                    self.state = 108
                    self.match(eslParser.T__0)
                    pass
                elif token in [eslParser.T__16]:
                    self.state = 110
                    self.if_stmt()
                    self.state = 111
                    self.match(eslParser.T__0)
                    pass
                elif token in [eslParser.LABEL_ID]:
                    self.state = 113
                    self.label_stmt()
                    self.state = 114
                    self.match(eslParser.T__11)
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 122
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.StatementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def gadget(self):
            return self.getTypedRuleContext(eslParser.GadgetContext,0)


        def assignment(self):
            return self.getTypedRuleContext(eslParser.AssignmentContext,0)


        def reg_assign(self):
            return self.getTypedRuleContext(eslParser.Reg_assignContext,0)


        def getRuleIndex(self):
            return eslParser.RULE_statement

        def enterRule(self, listener):
            if hasattr(listener, "enterStatement"):
                listener.enterStatement(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitStatement"):
                listener.exitStatement(self)




    def statement(self):

        localctx = eslParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_statement)
        try:
            self.state = 126
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 123
                self.gadget()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 124
                self.assignment()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 125
                self.reg_assign()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class GadgetContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.GadgetContext, self).__init__(parent, invokingState)
            self.parser = parser

        def GADGET_ID(self):
            return self.getToken(eslParser.GADGET_ID, 0)

        def arguments(self):
            return self.getTypedRuleContext(eslParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return eslParser.RULE_gadget

        def enterRule(self, listener):
            if hasattr(listener, "enterGadget"):
                listener.enterGadget(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitGadget"):
                listener.exitGadget(self)




    def gadget(self):

        localctx = eslParser.GadgetContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_gadget)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            self.match(eslParser.GADGET_ID)
            self.state = 129
            self.match(eslParser.T__2)
            self.state = 131
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << eslParser.T__12) | (1 << eslParser.REG_ID) | (1 << eslParser.ARG_ID))) != 0):
                self.state = 130
                self.arguments()


            self.state = 133
            self.match(eslParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentsContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.ArgumentsContext, self).__init__(parent, invokingState)
            self.parser = parser

        def argument(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(eslParser.ArgumentContext)
            else:
                return self.getTypedRuleContext(eslParser.ArgumentContext,i)


        def getRuleIndex(self):
            return eslParser.RULE_arguments

        def enterRule(self, listener):
            if hasattr(listener, "enterArguments"):
                listener.enterArguments(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArguments"):
                listener.exitArguments(self)




    def arguments(self):

        localctx = eslParser.ArgumentsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arguments)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 135
            self.argument()
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==eslParser.T__10:
                self.state = 136
                self.match(eslParser.T__10)
                self.state = 137
                self.argument()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ArgumentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.ArgumentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ARG_ID(self):
            return self.getToken(eslParser.ARG_ID, 0)

        def REG_ID(self):
            return self.getToken(eslParser.REG_ID, 0)

        def getRuleIndex(self):
            return eslParser.RULE_argument

        def enterRule(self, listener):
            if hasattr(listener, "enterArgument"):
                listener.enterArgument(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitArgument"):
                listener.exitArgument(self)




    def argument(self):

        localctx = eslParser.ArgumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_argument)
        self._la = 0 # Token type
        try:
            self.state = 148
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [eslParser.T__12, eslParser.ARG_ID]:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==eslParser.T__12:
                    self.state = 143
                    self.match(eslParser.T__12)


                self.state = 146
                self.match(eslParser.ARG_ID)
                pass
            elif token in [eslParser.REG_ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 147
                self.match(eslParser.REG_ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class AssignmentContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.AssignmentContext, self).__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(eslParser.STRING, 0)

        def INT(self):
            return self.getToken(eslParser.INT, 0)

        def TYPE(self):
            return self.getToken(eslParser.TYPE, 0)

        def ARG_ID(self):
            return self.getToken(eslParser.ARG_ID, 0)

        def getRuleIndex(self):
            return eslParser.RULE_assignment

        def enterRule(self, listener):
            if hasattr(listener, "enterAssignment"):
                listener.enterAssignment(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAssignment"):
                listener.exitAssignment(self)




    def assignment(self):

        localctx = eslParser.AssignmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_assignment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(eslParser.TYPE)
            self.state = 151
            self.match(eslParser.ARG_ID)
            self.state = 153
            self.match(eslParser.T__13)
            self.state = 154
            _la = self._input.LA(1)
            if not(_la==eslParser.STRING or _la==eslParser.INT):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Reg_assignContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.Reg_assignContext, self).__init__(parent, invokingState)
            self.parser = parser

        def TYPE(self):
            return self.getToken(eslParser.TYPE, 0)

        def REG_ID(self):
            return self.getToken(eslParser.REG_ID, 0)

        def GADGET_ID(self):
            return self.getToken(eslParser.GADGET_ID, 0)

        def arguments(self):
            return self.getTypedRuleContext(eslParser.ArgumentsContext,0)


        def getRuleIndex(self):
            return eslParser.RULE_reg_assign

        def enterRule(self, listener):
            if hasattr(listener, "enterReg_assign"):
                listener.enterReg_assign(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitReg_assign"):
                listener.exitReg_assign(self)




    def reg_assign(self):

        localctx = eslParser.Reg_assignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_reg_assign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 156
            self.match(eslParser.TYPE)
            self.state = 157
            self.match(eslParser.REG_ID)
            self.state = 158
            self.match(eslParser.T__13)
            self.state = 159
            self.match(eslParser.GADGET_ID)
            self.state = 160
            self.match(eslParser.T__2)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << eslParser.T__12) | (1 << eslParser.REG_ID) | (1 << eslParser.ARG_ID))) != 0):
                self.state = 161
                self.arguments()


            self.state = 164
            self.match(eslParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Assert_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.Assert_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def REG_ID(self, i=None):
            if i is None:
                return self.getTokens(eslParser.REG_ID)
            else:
                return self.getToken(eslParser.REG_ID, i)

        def CMP_OP(self):
            return self.getToken(eslParser.CMP_OP, 0)

        def INT(self):
            return self.getToken(eslParser.INT, 0)

        def ARG_ID(self):
            return self.getToken(eslParser.ARG_ID, 0)

        def STRING(self):
            return self.getToken(eslParser.STRING, 0)

        def getRuleIndex(self):
            return eslParser.RULE_assert_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterAssert_stmt"):
                listener.enterAssert_stmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAssert_stmt"):
                listener.exitAssert_stmt(self)




    def assert_stmt(self):

        localctx = eslParser.Assert_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_assert_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.match(eslParser.T__14)
            self.state = 167
            self.match(eslParser.REG_ID)
            self.state = 168
            self.match(eslParser.CMP_OP)
            self.state = 169
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << eslParser.REG_ID) | (1 << eslParser.ARG_ID) | (1 << eslParser.STRING) | (1 << eslParser.INT))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Jmp_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.Jmp_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LABEL_ID(self):
            return self.getToken(eslParser.LABEL_ID, 0)

        def getRuleIndex(self):
            return eslParser.RULE_jmp_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterJmp_stmt"):
                listener.enterJmp_stmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitJmp_stmt"):
                listener.exitJmp_stmt(self)




    def jmp_stmt(self):

        localctx = eslParser.Jmp_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_jmp_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 171
            self.match(eslParser.T__15)
            self.state = 172
            self.match(eslParser.LABEL_ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class If_stmtContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(eslParser.If_stmtContext, self).__init__(parent, invokingState)
            self.parser = parser

        def REG_ID(self):
            return self.getToken(eslParser.REG_ID, 0)

        def CMP_OP(self):
            return self.getToken(eslParser.CMP_OP, 0)

        def INT(self):
            return self.getToken(eslParser.INT, 0)

        def LABEL_ID(self):
            return self.getToken(eslParser.LABEL_ID, 0)

        def getRuleIndex(self):
            return eslParser.RULE_if_stmt

        def enterRule(self, listener):
            if hasattr(listener, "enterIf_stmt"):
                listener.enterIf_stmt(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitIf_stmt"):
                listener.exitIf_stmt(self)




    def if_stmt(self):
